# argus

./: .env.example  .gitignore  README.md  argus-implementation-guide_v2.html  pyproject.toml  research-agent-architecture.md
corpora/demo/: refinery-maintenance.md  strait-shipping-note.md
docs/: argus-implementation-guide.html  webapp.md
domains/commodities/: profile.yaml
domains/commodities/entities/: commodities.csv
domains/general_news/: profile.yaml
domains/general_news/entities/: entities.csv
registry/: sources.yaml
src/argus/: cli.py  envfile.py  settings.py  util.py  wiring.py
src/argus/claims/: engine.py  extract.py  models.py
src/argus/config/: __init__.py  profile.py  registry.py
src/argus/fetchers/: __init__.py  base.py  http_api.py  local_folder.py  poll.py  robots.py  rss.py  site_scraper.py  site_scraper.py.old
src/argus/governance/: candidates.py  discovery.py
src/argus/graphs/: checkpoint.py  daily.py  replay.py  research.py  shared.py  state.py
src/argus/index/: qdrant.py  retrieval.py
src/argus/ingest/: cluster.py  embed.py  entities.py  extract.py  pipeline.py  sparse.py
src/argus/llm/: factory.py
src/argus/observe/: golden.py  health.py
src/argus/snapshots/: blob.py  db.py  store.py
src/argus/synthesis/: render.py  sentences.py  synthesizer.py  verify.py
src/argus/webapp/: __init__.py  actions.py  api.py  app.py  config_store.py  jobs.py  rendermd.py  scheduler.py  state.py  wiring.py
tests/: test_envfile.py  test_factory_auth.py  test_webapp.py
tests/golden/general_news/: cases.yaml
(+5 files in other folders)
